Use a distinct service name.

--- a/k8s/mlab-sandbox/services.yml
+++ b/k8s/mlab-sandbox/services.yml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9090'
-  name: prometheus-server
+  name: prometheus-service
   namespace: default
 spec:
   ports:
