Move location of legacy configs to persistent storage.

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -223,8 +223,8 @@ scrape_configs:
       - files:
           # NOTE: the path /etc/prometheus/legacy does not exist in the default
           # image. It must be created in images derived for M-Lab.
-          - /etc/prometheus/legacy/*.json
-          - /etc/prometheus/legacy/*.yaml
+          - /prometheus/legacy/*.json
+          - /prometheus/legacy/*.yaml
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
