--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -221,7 +221,7 @@ scrape_configs:
   - job_name: 'legacy-targets'
     file_sd_configs:
       - files:
-          # NOTE: the path /etc/prometheus/legacy does not exist in the default
+          # NOTE: the path /prometheus/legacy does not exist in the default
           # image. It must be created in images derived for M-Lab.
           - /prometheus/legacy/*.json
           - /prometheus/legacy/*.yaml
