Update image version tag.

--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -35,7 +35,7 @@ spec:
         run: prometheus-server
     spec:
       containers:
-      - image: measurementlab/prometheus:v1.5.2
+      - image: measurementlab/prometheus:v1.5.2-1
         name: prometheus-server
         ports:
           - containerPort: 9090
