--- a/k8s/mlab-sandbox/services.yml
+++ b/k8s/mlab-sandbox/services.yml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    run: prometheus-server
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9090'
-  name: prometheus-service
+  name: prometheus-public-service
   namespace: default
 spec:
   ports:
@@ -14,6 +12,8 @@ spec:
     protocol: TCP
     targetPort: 9090
   selector:
+    # Pods with labels matching this key/value pair will be publically
+    # accessible through the service IP and port.
     run: prometheus-server
   sessionAffinity: None
   # Allocate a static IP manually in GCP console: Networking -> Load Balancing.
