--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -23,7 +23,7 @@ spec:
         run: prometheus-server
     spec:
       containers:
-      - image: measurementlab/prometheus-server:v1.5.2-1
+      - image: measurementlab/prometheus-server:v1.5.2-3
         # Note: this value appears to be ignored and the actual pod name is
         # derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -35,8 +35,14 @@ spec:
             memory: "3Gi"
             cpu: "500m"
         volumeMounts:
+        # /prometheus stores all metric data. Declared as VOLUME in base image.
         - mountPath: /prometheus
           name: prometheus-storage
+          subPath: prometheus-data
+        # /legacy-targets should contain legacy target configuration files.
+        - mountPath: /legacy-targets
+          name: prometheus-storage
+          subPath: legacy-targets
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
