Update legacy-targets path.

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -221,10 +221,11 @@ scrape_configs:
   - job_name: 'legacy-targets'
     file_sd_configs:
       - files:
-          # NOTE: the path /prometheus/legacy does not exist in the default
-          # image. It must be created in images derived for M-Lab.
-          - /prometheus/legacy/*.json
-          - /prometheus/legacy/*.yaml
+          # NOTE: The path /legacy-targets does not exist in the default
+          # image. Mount this path as a volume with the docker or kubernetes
+          # configuration.
+          - /legacy-targets/*.json
+          - /legacy-targets/*.yaml
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
