--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -23,7 +23,7 @@ spec:
         run: prometheus-server
     spec:
       containers:
-      - image: measurementlab/prometheus-server:v1.5.2-3
+      - image: prom/prometheus:v1.5.2
         # Note: this value appears to be ignored and the actual pod name is
         # derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -43,9 +43,15 @@ spec:
         - mountPath: /legacy-targets
           name: prometheus-storage
           subPath: legacy-targets
+        # /etc/config/prometheus.yml should contain the M-Lab Prometheus config.
+        - mountPath: /etc/config
+          name: prometheus-config
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
       - name: prometheus-storage
         persistentVolumeClaim:
           claimName: auto-prometheus-disk0
+      - name: prometheus-config
+        configMap:
+          name: prometheus-config
