--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -43,8 +43,8 @@ spec:
         - mountPath: /legacy-targets
           name: prometheus-storage
           subPath: legacy-targets
-        # /etc/config/prometheus.yml should contain the M-Lab Prometheus config.
-        - mountPath: /etc/config
+        # /etc/prometheus/prometheus.yml contains the M-Lab Prometheus config.
+        - mountPath: /etc/prometheus
           name: prometheus-config
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
