--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -24,8 +24,8 @@ spec:
     spec:
       containers:
       - image: prom/prometheus:v1.5.2
-        # Note: this value appears to be ignored and the actual pod name is
-        # derived from the Deployment.metadata.name. However, removing this
+        # Note: the container name appears to be ignored and the actual pod name
+        # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
         name: prometheus-server
         ports:
