--- a/k8s/prometheus.yml
+++ b/k8s/prometheus.yml
@@ -23,6 +23,8 @@ spec:
         run: prometheus-server
     spec:
       containers:
+      # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
+      # stable version.
       - image: prom/prometheus:v1.5.2
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
