Update prometheus configuration to run recording rules.

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -15,9 +15,7 @@ global:
 # Load rules once and periodically evaluate them according to the global
 # 'evaluation_interval'.
 rule_files:
-  # - "first.rules"
-  # - "second.rules"
-
+  - /etc/prometheus/rules.yml
 
 # Scrape configurations.
 #
