--- a/k8s/mlab-sandbox/services.yml
+++ b/k8s/mlab-sandbox/services.yml
@@ -20,3 +20,27 @@ spec:
   externalIPs:
     - 104.196.164.214
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    # The grafana web server does not export any prometheus metrics.
+    prometheus.io/scrape: 'false'
+  name: grafana-public-service
+  namespace: default
+spec:
+  ports:
+  - port: 3000
+    protocol: TCP
+    targetPort: 3000
+  selector:
+    # Pods with labels matching this key/value pair will be publically
+    # accessible through the service IP and port.
+    run: grafana-server
+  sessionAffinity: None
+  # Use the same static IP as used for Prometheus.
+  externalIPs:
+    # Use the same IP as above, since we're on a different port.
+    - 104.196.164.214
+  type: ClusterIP
