Do not include rules in the cluster configuration.

--- a/prometheus-cluster/prometheus.yml
+++ b/prometheus-cluster/prometheus.yml
@@ -15,7 +15,7 @@ global:
 # Load rules once and periodically evaluate them according to the global
 # 'evaluation_interval'.
 rule_files:
-  - /etc/prometheus/rules.yml
+  # - /etc/prometheus/rules.yml
 
 # Scrape configurations.
 #
