Specify non-empty metric names.

--- a/prometheus-federation/prometheus.yml
+++ b/prometheus-federation/prometheus.yml
@@ -257,7 +257,7 @@ scrape_configs:
       'match[]':
         # Note: For now simply collect everything. There must be at least one
         # match parameter. Prometheus selects the union of all match parameters.
-        - '{__name__=~".*"}'
+        - '{__name__=~".+"}'
 
     file_sd_configs:
       - files:
