Add persistent volume for alertmanager

--- a/k8s/persistent-volumes.yml
+++ b/k8s/persistent-volumes.yml
@@ -23,3 +23,16 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: auto-alertmanager-disk0
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "slow"
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
