--- a/k8s/mlab-sandbox/soltesz-test-3/services.yml
+++ b/k8s/mlab-sandbox/soltesz-test-3/services.yml
@@ -44,3 +44,27 @@ spec:
     # Use the same IP as above, since we're on a different port.
     - 35.184.247.140
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    prometheus.io/scrape: 'true'
+    prometheus.io/port: '9093'
+  name: alertmanager-public-service
+  namespace: default
+spec:
+  ports:
+  - port: 9093
+    protocol: TCP
+    targetPort: 9093
+  selector:
+    # Pods with labels matching this key/value pair will be publically
+    # accessible through the service IP and port.
+    run: alertmanager-server
+  sessionAffinity: None
+  # Use the same static IP as used for Prometheus.
+  externalIPs:
+    # Use the same IP as above, since we're on a different port.
+    - 35.184.247.140
+  type: ClusterIP
