--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -16,6 +16,7 @@ global:
 # 'evaluation_interval'.
 rule_files:
   - /etc/prometheus/rules.yml
+  - /etc/prometheus/alerts.yml
 
 # Scrape configurations.
 #
