Update resource requirements for alertmanager

--- a/k8s/federation/alertmanager.yml
+++ b/k8s/federation/alertmanager.yml
@@ -46,11 +46,11 @@ spec:
           - containerPort: 9093
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "1000m"
+            memory: "400Mi"
+            cpu: "200m"
           limits:
-            memory: "1Gi"
-            cpu: "1000m"
+            memory: "400Mi"
+            cpu: "200m"
         volumeMounts:
         # /alertmanager stores alert state, like acks, silences, etc.
         - mountPath: /alertmanager
