--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -269,3 +269,30 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
+  - job_name: 'blackbox-file'
+    metrics_path: /probe
+    params:
+      module: [host_online]  # Look for a HTTP 200 response.
+
+    file_sd_configs:
+      - files:
+          - /blackbox-targets/*.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # This is really very bad. The relabel config juggles the parameters as
+    # well as the address being probed. This is also how they tell you to do
+    # it: https://github.com/prometheus/blackbox_exporter
+    relabel_configs:
+      - source_labels: [__address__]
+        regex: (.*)(:80)?
+        target_label: __param_target
+        replacement: ${1}
+      - source_labels: [__param_target]
+        regex: (.*)
+        target_label: instance
+        replacement: ${1}
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: 104.197.220.28:9115
