--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -1,68 +1,58 @@
+# M-Lab blackbox exporter configuration.
+#
+# The blackbox exporter allows probes of endpoints over HTTP, HTTPS, DNS, TCP
+# and ICMP.
+#
+# Every probe takes a "target" and "module" as parameters. The probe runs
+# synchronously with the request. Typically, Prometheus will issue the request
+# to the blackbox exporter.
+#
+# We can run a sample check. For example:
+#    target=mlab1.lga02.measurement-lab.org:806
+#    module=ssh_v4_online
+#    wget "http://<blackbox-ip>:9115/probe?target=${target}&module=${module}"
+#
+# Returns:
+#
+#    probe_ip_protocol 4
+#    probe_duration_seconds 0.179516
+#    probe_success 1
+#
+# See https://github.com/prometheus/blackbox_exporter for additional examples.
+
 modules:
-  host_online:
+  # target=<hostname:port>
+  tcp_v4_online:
+    prober: tcp
+    timeout: 5s
+    tcp:
+      protocol: "tcp4"
+
+  # target=<hostname:port>
+  ssh_v4_online:
     prober: tcp
     timeout: 10s
     tcp:
       protocol: "tcp4"
       query_response:
         - expect: "SSH-2.0-OpenSSH_.+"
-    
-  http_post_2xx:
-    prober: http
-    timeout: 5s
-    http:
-      method: POST
-      headers:
-        Content-Type: application/json
-      body: '{}'
 
-  tcp_connect_v4_example:
-    prober: tcp
-    timeout: 5s
-    tcp:
-      protocol: "tcp4"
-
-  irc_banner_example:
-    prober: tcp
-    timeout: 5s
-    tcp:
-      query_response:
-        - send: "NICK prober"
-        - send: "USER prober prober prober :prober"
-        - expect: "PING :([^ ]+)"
-          send: "PONG ${1}"
-        - expect: "^:[^ ]+ 001"
-
-  icmp_example:
+  # target=<hostname>
+  icmp:
     prober: icmp
     timeout: 5s
     icmp:
       protocol: "icmp"
       preferred_ip_protocol: "ip4"
 
-  dns_udp_example:
-    prober: dns
+  # target=<http[s]://host:port>
+  #
+  # Works with http or https targets.
+  #
+  # NOTE: M-Lab DRACs are network filtered.
+  # NOTE: NDT ports do not return valid HTTP responses and appear to fail.
+  http_2xx:
+    prober: http
     timeout: 5s
-    dns:
-      query_name: "www.prometheus.io"
-      query_type: "A"
-      valid_rcodes:
-      - NOERROR
-      validate_answer_rrs:
-        fail_if_matches_regexp:
-        - ".*127.0.0.1"
-        fail_if_not_matches_regexp:
-        - "www.prometheus.io.\t300\tIN\tA\t127.0.0.1"
-      validate_authority_rrs:
-        fail_if_matches_regexp:
-        - ".*127.0.0.1"
-      validate_additional_rrs:
-        fail_if_matches_regexp:
-        - ".*127.0.0.1"
-
-  dns_tcp_example:
-    prober: dns
-    dns:
-      protocol: "tcp" # accepts "tcp/tcp4/tcp6/udp/udp4/udp6", defaults to "udp"
-      preferred_ip_protocol: "ip4" # used for "udp/tcp", defaults to "ip6"
-      query_name: "www.prometheus.io"
+    http:
+      method: GET
