Add context comments for the blackbox relabel config

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -269,6 +269,9 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
+  # Blackbox configurations.
+  #
+  # Each blackbox configuration uses a different probe (tcp, icmp, http, etc).
   - job_name: 'blackbox-ssh-targets'
     metrics_path: /probe
     params:
@@ -280,22 +283,36 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-    # This is really very bad. The relabel config juggles the parameters as
-    # well as the address being probed. This is also how they tell you to do
-    # it: https://github.com/prometheus/blackbox_exporter
+    # This relabel config is necessary. The relabel config redefines the address
+    # to scrape and sets the correct parameters to pass to the scrape target.
+    #
+    # While not as direct as other configs, this approach allows us to specify a
+    # dynamic list of targets for a static blackbox exporter. This is also the
+    # supported configuration: https://github.com/prometheus/blackbox_exporter
     relabel_configs:
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value.
       - source_labels: [__address__]
         regex: (.*)(:80)?
         target_label: __param_target
         replacement: ${1}
+
+      # Use the target parameter defined above and use it to define the
+      # "instance" label.
       - source_labels: [__param_target]
         regex: (.*)
         target_label: instance
         replacement: ${1}
+
+      # Since __address__ is the target that prometheus will contact,
+      # unconditionally reset the __address__ label to the blackbox exporter
+      # address.
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: 104.197.220.28:9115
+        replacement: blackbox-public-service.default.svc.cluster.local:9115
 
   - job_name: 'blackbox-tcp-targets'
     metrics_path: /probe
@@ -308,9 +325,6 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-    # This is really very bad. The relabel config juggles the parameters as
-    # well as the address being probed. This is also how they tell you to do
-    # it: https://github.com/prometheus/blackbox_exporter
     relabel_configs:
       - source_labels: [__address__]
         regex: (.*)(:80)?
@@ -323,7 +337,7 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: 104.197.220.28:9115
+        replacement: blackbox-public-service.default.svc.cluster.local:9115
 
   - job_name: 'blackbox-icmp-targets'
     metrics_path: /probe
@@ -336,9 +350,6 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-    # This is really very bad. The relabel config juggles the parameters as
-    # well as the address being probed. This is also how they tell you to do
-    # it: https://github.com/prometheus/blackbox_exporter
     relabel_configs:
       - source_labels: [__address__]
         regex: (.*)(:80)?
@@ -351,7 +362,7 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: 104.197.220.28:9115
+        replacement: blackbox-public-service.default.svc.cluster.local:9115
 
   - job_name: 'blackbox-http-targets'
     metrics_path: /probe
@@ -364,9 +375,6 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
-    # This is really very bad. The relabel config juggles the parameters as
-    # well as the address being probed. This is also how they tell you to do
-    # it: https://github.com/prometheus/blackbox_exporter
     relabel_configs:
       - source_labels: [__address__]
         regex: (.*)(:80)?
@@ -379,4 +387,4 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: 104.197.220.28:9115
+        replacement: blackbox-public-service.default.svc.cluster.local:9115
