--- a/k8s/federation/prometheus.yml
+++ b/k8s/federation/prometheus.yml
@@ -97,6 +97,29 @@ spec:
         - mountPath: /prometheus
           name: prometheus-storage
 
+      - image: measurementlab/mlab-service-discovery
+        name: service-discovery
+        env:
+        - name: GCLOUD_PROJECT
+          valueFrom:
+            configMapKeyRef:
+              name: prometheus-federation-config
+              key: gcloud-project
+        args: [ "-output=/targets/aeflex-targets/aeflex.json",
+                "-project=$(GCLOUD_PROJECT)"]
+        resources:
+          requests:
+            memory: "10Mi"
+            cpu: "50m"
+          limits:
+            memory: "10Mi"
+            cpu: "50m"
+        volumeMounts:
+        # Mount the the prometheus-storage for write access to the target
+        # directories.
+        - mountPath: /targets
+          name: prometheus-storage
+
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
