Add a new directory for App Engine Flex VM configs.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -340,3 +340,25 @@ scrape_configs:
     static_configs:
       - targets:
         - pushgateway-public-service.default.svc.cluster.local:9091
+
+  # Scrape config for App Engine Flex VMs.
+  #
+  # In order to scrape Prometheus metrics directly from Flex VMs, the app.yaml
+  # configuration must include a rule to forward the container port to the host
+  # VM. The measurementlab/mlab-service-discovery detects these VMs and
+  # generates a targets file.
+  #
+  # Learn more at:
+  #   TODO(soltesz): add canonical link to the service discovery repo when it
+  #   exists.
+  - job_name: 'aeflex-targets'
+    file_sd_configs:
+      - files:
+          - /aeflex-targets/*.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    relabel_configs:
+      # Copy all labels from the aeflex service discovery.
+      - action: labelmap
+        regex: __aef_(.+)
