Fix regex to use a group.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -300,7 +300,7 @@ scrape_configs:
       # Use the "module" label defined in the input file as the module name for
       # the blackbox exporter request.
       - source_labels: [module]
-        regex: .*
+        regex: (.*)
         target_label: __param_module
         replacement: ${1}
 
