Use rsyncd_online as the module name.

--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -43,7 +43,7 @@ modules:
         - expect: "SSH-2.0-OpenSSH_.+"
 
   # target=<hostname:port>
-  rsync_online:
+  rsyncd_online:
     prober: tcp
     timeout: 5s
     tcp:
