--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: go
 go_import_path: github.com/m-lab/prometheus-support
 
 install:
-- go install github.com/prometheus/prometheus/cmd/promtool
+- go get github.com/prometheus/prometheus/cmd/promtool
 
 script:
 # Run query "unit tests".
