Update node discovery rule to use k8s api server proxy.

--- a/config/cluster/prometheus/prometheus.yml
+++ b/config/cluster/prometheus/prometheus.yml
@@ -117,6 +117,14 @@ scrape_configs:
     relabel_configs:
       - action: labelmap
         regex: __meta_kubernetes_node_label_(.+)
+      # Node /metrics in v1.6+ are accessible via a proxy through the
+      # kubernetes api server. So, we must update the target and metric path.
+      - target_label: __address__
+        replacement: kubernetes.default.svc:443
+      - source_labels: [__meta_kubernetes_node_name]
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/${1}/proxy/metrics
 
 
   # Scrape config for kubernetes pods.
