Use any sandbox target

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ deploy:
   on:
     repo: m-lab/prometheus-support
     all_branches: true
-    condition: $TRAVIS_BRANCH == sandbox-soltesz && $TRAVIS_EVENT_TYPE == push
+    condition: $TRAVIS_BRANCH == sandbox-* && $TRAVIS_EVENT_TYPE == push
 
 #########################################
 ## Staging
