Updated metric name and make federation more selective

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -310,7 +310,7 @@ scrape_configs:
         # all match parameters.
         - 'up{application="scraper"}'
         - 'up{application="scraper-sync"}'
-        - '{deployment="downloader"}'
+        - 'downloader_last_success_time_seconds'
         - 'scraper_maxrawfiletimearchived'
         - 'scraper_lastcollectionattempt'
 
