Sets __address__ rewrite to not look for an optional port number, since it was removed from the targets generated by mlabconfig.py in the operator repo.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -391,7 +391,7 @@ scrape_configs:
       # Here, we set (i.e. "replace") a request parameter "target" equal to the
       # host value.
       - source_labels: [__address__]
-        regex: (.*)(:9116)?
+        regex: (.*)
         target_label: __param_target
         replacement: ${1}
 
