Syncs the comments name for a label with the actual label name, which had become out of sync.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -402,7 +402,7 @@ scrape_configs:
         target_label: __param_module
         replacement: ${1}
 
-      # The "__exporter-project" label will contain a shortened GCP project
+      # The "__exporter_project" label will contain a shortened GCP project
       # name. We use this to construct the domain name of the GCE instance
       # running the snmp_exporer in that project.
       - source_labels: [__exporter_project]
