Use template variables.

--- a/k8s/scraper-cluster/deployments/prometheus.yml
+++ b/k8s/scraper-cluster/deployments/prometheus.yml
@@ -95,11 +95,11 @@ spec:
           - containerPort: 9090
         resources:
           requests:
-            memory: "96Gi"
-            cpu: "8000m"
+            memory: "{{PROMETHEUS_RAM}}"
+            cpu: "{{PROMETHEUS_CPU}}"
           limits:
-            memory: "96Gi"
-            cpu: "8000m"
+            memory: "{{PROMETHEUS_RAM}}"
+            cpu: "{{PROMETHEUS_CPU}}"
         volumeMounts:
         # /prometheus stores all metric data. Declared as VOLUME in base image.
         - mountPath: /prometheus
@@ -139,7 +139,7 @@ spec:
       volumes:
       - name: prometheus-storage
         persistentVolumeClaim:
-          claimName: auto-prometheus-ssd1
+          claimName: {{PROMETHEUS_VOLUME_NAME}}
       - name: prometheus-config
         configMap:
           name: prometheus-cluster-config
