Run in a subshell

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   KEXPAND_VERSION=0.2;
   go get -d $KEXPAND_URI;
   git -C $GOPATH/src/$KEXPAND_URI checkout -b $KEXPAND_VERSION $KEXPAND_VERSION;
-  cd $GOPATH/src/$KEXPAND_URI && make
+  (cd $GOPATH/src/$KEXPAND_URI && make)
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
 
 script:
