Enable service account globally

--- a/k8s/scraper-cluster/deployments/prometheus.yml
+++ b/k8s/scraper-cluster/deployments/prometheus.yml
@@ -27,8 +27,7 @@ spec:
     spec:
       # References a service account with RBAC permissions for accessing node
       # metrics. This is required for k8s version 1.6+.
-      # TODO(soltesz): enable when cluster is upgraded to 1.6+
-      # serviceAccountName: prometheus
+      serviceAccountName: prometheus
 
       # Clusters running a prometheus instance must label nodes exclusively for
       # use by prometheus. See README for steps to create a GKE cluster for
