Use template values

--- a/k8s/prometheus-federation/services/github-receiver-public-service.yml
+++ b/k8s/prometheus-federation/services/github-receiver-public-service.yml
@@ -15,5 +15,5 @@ spec:
   sessionAffinity: None
   # Allocate a static IP manually in GCP console: Networking -> Load Balancing.
   externalIPs:
-    - 35.184.81.106
+    - {{EXTERNAL_IP}}
   type: ClusterIP
