--- a/k8s/prometheus-federation/services/pushgateway-public-service.yml
+++ b/k8s/prometheus-federation/services/pushgateway-public-service.yml
@@ -16,5 +16,5 @@ spec:
   # Use the same static IP as used for Prometheus.
   externalIPs:
     # Use the same IP as above, since we're on a different port.
-    - 35.184.81.106
+    - {{EXTERNAL_IP}}
   type: ClusterIP
