Specify the PV size.

--- a/k8s/prometheus-federation/persistentvolumes/persistent-volumes.yml
+++ b/k8s/prometheus-federation/persistentvolumes/persistent-volumes.yml
@@ -9,7 +9,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 400Gi
+      storage: {{PROMETHEUS_VOLUME_SIZE}}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -36,29 +36,3 @@ spec:
   resources:
     requests:
       storage: 10Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: auto-prometheus-ssd0
-  annotations:
-    volume.beta.kubernetes.io/storage-class: "fast"
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 200Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: auto-prometheus-ssd1
-  annotations:
-    volume.beta.kubernetes.io/storage-class: "fast"
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 200Gi
