--- a/k8s/prometheus-federation/mlab-sandbox.yml
+++ b/k8s/prometheus-federation/mlab-sandbox.yml
@@ -3,4 +3,5 @@
 GCLOUD_PROJECT: mlab-sandbox
 PROMETHEUS_RAM: 12Gi
 PROMETHEUS_CPU: 3000m
+PROMETHEUS_VOLUME_SIZE: 200Gi
 EXTERNAL_IP: 35.184.166.181
