--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -3,4 +3,5 @@
 GCLOUD_PROJECT: mlab-staging
 PROMETHEUS_RAM: 12Gi
 PROMETHEUS_CPU: 6000m
+PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.185.76.159
