Drops all 'ifAlias' labels that are just empty strings.  (#107)
* Drops all 'ifAlias' labels that are just empty strings. In other words only keep the label if it has a value.

* Moves the 'ifAlias' label preening to a metric_relabel_config section, since those labels won't actually be present in the relabel_config stage.

* Looks for empty 'ifAlias' labels and sets their 'replacement' to an empty string, which supposedly removes the label.

--- a/config/federation/prometheus/prometheus.yml
+++ b/config/federation/prometheus/prometheus.yml
@@ -408,6 +408,18 @@ scrape_configs:
         target_label: __address__
         replacement: snmp-exporter.${1}.measurementlab.net:9116
 
+    # This relabel config is the last relabel processed before ingesting data
+    # into the datastore.
+    metric_relabel_configs:
+
+      # Most all 'ifAlias' labels will be empty. Rather than pollute the
+      # datastore with a bunch of empty labels, only keep the ones that have
+      # some value.
+      - source_labels: [ifAlias]
+        regex: ^$
+        target_label: ifAlias
+        replacement: ""
+
   # Scrape config for pushgateway.
   #
   # Push gateways allow services to publish metrics for later collection by
