Add missing comma

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -247,6 +247,6 @@ ALERT OverOneBillion
     severity = "page"
   }
   ANNOTATIONS {
-    summary = "The total number of s2c + c2s tests in our BigQuery DB of tests"
+    summary = "The total number of s2c + c2s tests in our BigQuery DB of tests",
     hints = "Unlike most alerts, when this one fires, we throw a party"
   }
