Adds a new blackbox_exporter module named 'neubot_online'.

--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -50,6 +50,15 @@ modules:
       protocol: "tcp4"
       tls: true
 
+  # target=<hostname>:9773/sapi/state
+  neubot_online:
+    prober: http
+    timeout: 5s
+    http:
+      protocol: "tcp4"
+      fail_if_not_matches_regexp:
+        - "queue_len_cur"
+
   # target=<hostname:port>
   rsyncd_online:
     prober: tcp
